2001-06-01  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-message.c (soup_message_set_method): 
	(soup_message_add_header_handler): 
	(soup_message_add_response_code_handler): 
	(soup_message_add_body_handler): Added.

	* src/soup-core/soup-socket.c (soup_address_get_name_sync): Allow
	syncronous reverse name lookups.

	* TODO (TODO): Updated.

	* src/soup-core/Makefile.am (bin_PROGRAMS): Added soup-httpd.

	* src/soup-core/soup-httpd.c: Added. Simple httpd server
	implementation. This shares a *lot* of code with soup-queue.c, so
	some hardc0re refactoring action is planned.

	* configure.in (GMODULE_LIBS): Added.

2001-05-29  Dick Porter  <dick@ximian.com>

	* tests/Makefile.am: Put the generated code into the build
	directory.  Run soup-config through /bin/sh to work around a
	permissions problem.

2001-05-25  Dick Porter  <dick@ximian.com>

	* Documentation

2001-05-25  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-queue.c (soup_message_queue): No need to free
	priv->recv_buf as it is now done in soup_message_cleanup().
	(soup_message_queue): Free response_header keys and values before
	destroying the hash table.

	* src/soup-core/soup-message.c (soup_message_free): Don't free
	priv->recv_buf here.
	(soup_message_cleanup): Free priv->recv_buf here instead.

	* src/soup-core/soup-queue.c (soup_finish_read): Since we now
	g_strdup() all headers, and we already g_memdup the actual body
	buffer, free the temporary recv_buf.

	* src/soup-core/soup-headers.c (soup_headers_parse_response):
	g_strdup() the response reason phrase.

2001-05-24  Alex Graveley  <alex@ximian.com>

	* README: Update Licensing section for soup-ssl-proxy.

2001-05-24  Larry Ewing  <lewing@ximian.com>

	* src/soup-wsdl-runtime/wsdl-soap-parse.c: include string.h for
	strlen and strcmp prototypes.
	* src/soup-wsdl-runtime/wsdl-soap-memory.c: include string.h for
	memset prototype.

2001-05-23  Dick Porter  <dick@ximian.com>

	* src/soup-wsdl-runtime/wsdl-typecodes-c.c